# alcoholic

./: LICENSE  README.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: ci.yml
scripts/: check.sh
src/alcoholic/cli/: __init__.py  calc_app.py  config_app.py
src/alcoholic/config/: __init__.py  locale.json  verdicts.py
tests/: test_config.py
tests/cli/: test_calc_app.py  test_config_app.py
