[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alcoholic"
version = "0.1.0"
description = "A CLI tool to calculate alcohol value proposition."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
alcoholic = "alcoholic.cli:calc_cli"
alcoholic-config = "alcoholic.cli:config_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/alcoholic"]
artifacts = ["*.json"]

[tool.hatch.build.targets.sdist]
include = ["src/alcoholic"]
artifacts = ["*.json"]